test-mission-app/podinfo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: podinfo
  labels:
    istio-injection: enabled
