test-mission-app/podinfo/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: podinfo
  namespace: podinfo
spec:
  gateways:
    - istio-system/tenant
  hosts:
    - podinfo.bigbang.dev
  http:
    - route:
        - destination:
            host: podinfo.podinfo.svc.cluster.local
            port:
              number: 9898
